security_grp.tf


resource "aws_security_group" "web_sg" {
    vpc_id = aws_vpc.terraform-vpc.id

    ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

    ingress {
        from_port=22
        to_port=22
        protocol="tcp"
        cidr_blocks = ["182.156.215.82/32"]
    }
    egress {
        from_port=0
        to_port=0
        protocol="-1"
        cidr_blocks = ["0.0.0.0/0"]
    }
    tags = {
      Name="web_sg"
    }
}
